# EloConqueror

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-build.yml
include/: alpha-beta.hpp  board.hpp  evaluate.hpp  move-generator.hpp  move.hpp  perft.hpp  search.hpp  tree-search.hpp  uci.hpp  undo_move.hpp  util.hpp
src/: alpha-beta.cpp  board.cpp  evaluate.cpp  main.cpp  move-generator.cpp  perft.cpp  search.cpp  tree-search.cpp  uci.cpp
tests/: CMakeLists.txt  perf_test.cpp
